nextcloud_postgress/yaml_nextcloud/nextcloud-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-server
  namespace: nextcloud
  labels:
    app: nextcloud
    version: "1.0"
  description: Deployment for Nextcloud server application
spec:
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:25.0.4-apache
          imagePullPolicy: IfNotPresent

          volumeMounts:
            - name: server-storage
              mountPath: /var/www/html/
      volumes:
        - name: server-storage
          persistentVolumeClaim:
            claimName: nextcloud-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-server
  namespace: nextcloud
  labels:
    app: nextcloud
  description: Service for Nextcloud server application
spec:
  selector:
    app: nextcloud
  ports:
    - name: http
      port: 80
      protocol: TCP
