nextcloud_postgress/yaml_nextcloud/cluster-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  namespace: nextcloud
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    cert-manager.io/issuer: "selfsigned"
spec:
  tls:
    - hosts:
        - nc.rancher-ks8.pve.datacenter.tsc
      secretName: tls-secret
  rules:
    - host: nc.rancher-ks8.pve.datacenter.tsc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-server
                port:
                  number: 80
